fixed size of criteo ads on mobile devices

--- a/themes/siz/assets/css/webkid.css
+++ b/themes/siz/assets/css/webkid.css
@@ -114,7 +114,7 @@ iframe {
 }
 
 .ad.ad-criteo-above-video, .ad.ad-criteo-bellow-video {
-  width: 102%;
+  width: 103%;
   margin-top: 20px;
   margin-bottom: 20px;
 }
